APEX-655: UAT Feedback fix

--- a/docroot/themes/custom/apex_tools/src/scss/components/_multi-step-form.scss
+++ b/docroot/themes/custom/apex_tools/src/scss/components/_multi-step-form.scss
@@ -2753,6 +2753,10 @@
   }
 }
 
+#edit-field-upload-0-top {
+  display: none !important;
+}
+
 div.notice--info {
   text-align: left !important;
 }
