APEX-655: UAT Feedback fix

--- a/docroot/themes/custom/apex_tools/src/scss/components/_header.scss
+++ b/docroot/themes/custom/apex_tools/src/scss/components/_header.scss
@@ -269,6 +269,11 @@
     padding-bottom: 0.3125rem;
   }
 }
+
+.custom-masthead-language {
+  display: flex;
+  height: 100%;
+}
 /**
 * NAV HEADER UTILS
 */
