--- a/docroot/themes/custom/atg/templates/content/field--field-locations-content-type.html.twig
+++ b/docroot/themes/custom/atg/templates/content/field--field-locations-content-type.html.twig
@@ -2,7 +2,7 @@
 	{% set content_type = item.content['#plain_text'] %}
 	<geoui api="/jsonapi/node/{{ content_type }}?include=field_term_continent">
 		<template slot="infowindow" slot-scope="scope" v-if="scope.selected">
-			{% filter raw %}
+			{% apply spaceless %}
 				<h3>{{ scope.selected.attributes.title }}</h3>
 				<p>
 					<span v-html="$options.filters.formatAddress(scope.selected.attributes.field_address)"></span>
@@ -13,26 +13,29 @@
 						<br><a :href="'mailto:' + email">{{ email }}</a>
 					</template>
 				</p>
-			{% endfilter %}
+			{% endapply %}
+
+
 		</template>
 		<template slot="list" slot-scope="scope">
 			<section class="section main">
 				<div class="directory">
 					<div class="directory-group" v-for="(locations, continent) in scope.groupedData('relationships.field_term_continent.data.attributes.tid')">
-						{% filter raw %}
-						<h2 class="directory-group-title">{{ locations[0].relationships.field_term_continent.data.attributes.name }}</h2>
-						<ul class="directory-items">
-							<li class="directory-item" v-for="location in locations">
-								<h3 class="directory-item-title">{{ location.attributes.title }}</h3>
-								<p>
-									<span v-html="$options.filters.formatAddress(location.attributes.field_address)"></span>
-									<template v-for="phone in location.attributes.field_phone">
-										<br><a :href="'tel:' + phone">{{ phone }}</a>
-									</template>
-								</p>
-							</li>
-						</ul>
-						{% endfilter %}
+						{% apply spaceless %}
+							<h2 class="directory-group-title">{{ locations[0].relationships.field_term_continent.data.attributes.name }}</h2>
+							<ul class="directory-items">
+								<li class="directory-item" v-for="location in locations">
+									<h3 class="directory-item-title">{{ location.attributes.title }}</h3>
+									<p>
+										<span v-html="$options.filters.formatAddress(location.attributes.field_address)"></span>
+										<template v-for="phone in location.attributes.field_phone">
+											<br><a :href="'tel:' + phone">{{ phone }}</a>
+										</template>
+									</p>
+								</li>
+							</ul>
+						{% endapply %}
+
 					</div>
 				</div>
 			</section>
