--- a/docroot/themes/custom/atg/templates/nodes/node--about.html.twig
+++ b/docroot/themes/custom/atg/templates/nodes/node--about.html.twig
@@ -2,7 +2,7 @@
 
 <geoui api="/jsonapi/node/company_locations?include=field_term_department,field_term_continent">
 	<template slot="infowindow" slot-scope="scope" v-if="scope.selected">
-		{% filter raw %}
+		{% apply spaceless %}
 			<h3>{{ scope.selected.attributes.title }}</h3>
 			<p v-html="$options.filters.formatAddress(scope.selected.attributes.field_address)"></p>
 			<p v-if="scope.selected.attributes.field_phone">
@@ -15,6 +15,6 @@
 					<br v-if="index > 0">{{ department.attributes.name }}
 				</template>
 			</p>
-		{% endfilter %}
+		{% endapply %}
 	</template>
 </geoui>
