--- a/docroot/themes/custom/atg/templates/nodes/node--geo-directory.html.twig
+++ b/docroot/themes/custom/atg/templates/nodes/node--geo-directory.html.twig
@@ -44,7 +44,7 @@
     </scoped-form>
   </template>
   <template slot="infowindow" slot-scope="scope" v-if="scope.selected">
-    {% filter raw %}
+    {% apply spaceless %}
       <h3>{{ '{{ scope.selected.attributes.title }}' }}</h3>
       <p>
         <span v-html="$options.filters.formatAddress(scope.selected.attributes.field_address)"></span>
@@ -52,7 +52,8 @@
           <br><a :href="'tel:' + phone">{{ '{{ phone }}' }}</a>
         </template>
       </p>
-    {% endfilter %}
+    {% endapply %}
+
     <div class="infowindow-actions">
       <a :href="'{{ locale.path }}/request-a-quote?distributor_id=' + scope.selected.attributes.nid" class="infowindow-action">
         {{ svg('dist/img/icons/nut.svg') }} {{ 'Request Quote'|t }}
@@ -67,17 +68,18 @@
     <table-component :data="scope.data" :show-filter="false" :show-caption="false" :cache-lifetime="0" sort-by="relationships.field_term_distributor_level.data.attributes.weight" sort-order="asc" class="mega-table-component" table-class="mega-table" :filter-no-results="'{{ 'No distributors found within ' | t }}' + scope.state.radius + '{{ ' miles of ' | t }}' + scope.state.q">
       <table-column label="Distributor" show="attributes.title">
         <template slot-scope="row">
-          {% filter raw %}
-            <h3 :id="'distributor-' + row.id">{{ '{{ row.attributes.title }}' }}</h3>
-            <p>
-              <span v-html="$options.filters.formatAddress(row.attributes.field_address)"></span>
-              <template v-for="phone in row.attributes.field_phone">
-                <br><a :href="'tel:' + phone" >{{ '{{ phone }}' }}</a>
-              </template>
-              <br>
-              <a v-bind:href="row.attributes.field_website" target="_blank"><span v-html="row.attributes.field_website"></span></a>
-            </p>
-          {% endfilter %}
+          {% apply spaceless %}
+          <h3 :id="'distributor-' + row.id">{{ '{{ row.attributes.title }}' }}</h3>
+          <p>
+            <span v-html="$options.filters.formatAddress(row.attributes.field_address)"></span>
+            <template v-for="phone in row.attributes.field_phone">
+              <br><a :href="'tel:' + phone" >{{ '{{ phone }}' }}</a>
+            </template>
+            <br>
+            <a v-bind:href="row.attributes.field_website" target="_blank"><span v-html="row.attributes.field_website"></span></a>
+          </p>
+          {% endapply %}
+
         </template>
       </table-column>
       <table-column label="Distance" show="attributes.distance.distance" data-type="numeric">
