APEX-792: Bug fixes

--- a/docroot/themes/custom/apex_tools/src/scss/components/_multi-step-form.scss
+++ b/docroot/themes/custom/apex_tools/src/scss/components/_multi-step-form.scss
@@ -2527,6 +2527,12 @@
   }
 }
 
+.field--name-field-free-spinning {
+  .js-form-type-checkbox { 
+    flex-wrap: unset !important;
+  }
+}
+
 [data-drupal-selector$="subform-field-screwdriver"] {
   tr, td {
     display: block;
