APEX-792: UAT fix

--- a/docroot/themes/custom/apex_tools/templates/products/single.html.twig
+++ b/docroot/themes/custom/apex_tools/templates/products/single.html.twig
@@ -51,8 +51,8 @@
 
                 <footer class="product-hero-footer">
                     <p class="buttons">
-                        <a href="{{ locale.path }}/request-a-quote" class="button button--primary button--simple">{{ 'Request a Quote' | t }}</a>
-                        <a href="{{ locale.path }}/request-a-demo" class="button button--secondary button--outline button--simple">{{ 'Request a Demo' | t }}</a>
+                        <a href="{{ locale.path }}/contact#request_a_quote" class="button button--primary button--simple">{{ 'Request a Quote' | t }}</a>
+                        <a href="{{ locale.path }}/contact#request_a_demo" class="button button--secondary button--outline button--simple">{{ 'Request a Demo' | t }}</a>
                     </p>
                 </footer>
             </div>
