--- a/docroot/themes/custom/cleco/templates/content/field--field-case-study.html.twig
+++ b/docroot/themes/custom/cleco/templates/content/field--field-case-study.html.twig
@@ -1,6 +1,6 @@
 <div class = "main">
   <section class="section solutions-cards-wrapper">
-    <h2 class="section-title"><em>Sucessful</em> {{ node_title }} Solutions</h2>
+    <h2 class="section-title"><em>Proven</em> {{ node_title }} Solutions</h2>
     {{ drupal_view('successful_automative_solutions', 'case_study') }}
   </section>
 </div>
