--- a/docroot/themes/custom/crescenttool/templates/menu/menu--can-expand--main--block-header-menu-main.twig
+++ b/docroot/themes/custom/crescenttool/templates/menu/menu--can-expand--main--block-header-menu-main.twig
@@ -110,6 +110,7 @@ We call a macro which calls itself to render the full tree.
                     </div>
                   {% endif %}
                 {% endif %}
+                {% if not break %}
                 {% if nested_item.below %}
                   <div class="secondary-menu {% if loop.first %}secondary-menu__first{% endif %}">
                     <header class="menu-item__panel-header">
@@ -124,6 +125,7 @@ We call a macro which calls itself to render the full tree.
                     {{ menus.menu_links(item.below, attributes, menu_level + 1, menu_name, item_id) }}
                     {% set break = true %}
                   </div>
+                {% endif %}
                 {% endif %}
               {% endfor %}
             </div>
