--- a/docroot/themes/custom/cleco/src/scss/components/_industry-solutions-home.scss
+++ b/docroot/themes/custom/cleco/src/scss/components/_industry-solutions-home.scss
@@ -3,31 +3,23 @@
   flex-wrap: wrap;
 
   .industry-solution-item {
-    flex: 0 0 25%;
-    max-width: 25%;
+    width: 23%;
+    margin: 0% 1%;
     padding-left: 2px;
     padding-right: 2px;
 
     @media only screen and (max-width: $media-screen-medium) {
-      flex: 0 0 50%;
-      max-width: 50%;
+      width: 47%;
+      margin: 0% 1%;
     }
-
+    
+    @media only screen and (max-width: $media-screen-mobile) {
+      width: 98%;
+      margin: 1%;
+    }
     .overlay-wrapper {
       position: relative;
-
-      @media only screen and (min-width: $media-screen-large) {
-        height: 394px;
-      }
-
-      @media only screen and (max-width: $media-screen-tablet) {
-        max-height: 429px;
-      }
-
-      @media only screen and (max-width: $media-screen-mobile) {
-        max-height: 324px;
-      }
-
+      height: 90%;
       &::before {
         content: "";
         position: absolute;
@@ -46,7 +38,14 @@
         display: flex;
         width: 100%;
         height: 100%;
-
+        .bg-img {
+          width: 100%;
+          height: 100%;
+          img {
+            width: 100%;
+            height: 100%;
+          }
+        }
         &::after {
           content: "";
           position: absolute;
@@ -79,7 +78,9 @@
         color: $color-white;
         justify-content: flex-end;
         z-index: 99;
-
+        @media only screen and (max-width: $media-screen-medium) {
+          bottom: 2%;
+        }
         .field-description {
           display: none;
 
